GUI tem betaling voltooid. fromNow() filter van showing aangepast

--- a/src/preferee/GUI/scenes/_global.css
+++ b/src/preferee/GUI/scenes/_global.css
@@ -39,5 +39,9 @@
 
 .hoofding {
      -fx-font-size: 120%;
-     -fx-text-fill: white;
- }
+     -fx-font-weight: bold;
+}
+
+.InvalidParameter {
+    -fx-background-color: red;
+}
