--- a/src/preferee/GUI/scenes/_theme.css
+++ b/src/preferee/GUI/scenes/_theme.css
@@ -24,3 +24,8 @@
     -fx-font-style: italic;
     -fx-font-weight: normal;
 }
+
+.hoofding {
+    -fx-font-size: 100%;
+    -fx-text-fill: white;
+}
