--- a/src/preferee/GUI/scenes/MovieShowings.fxml
+++ b/src/preferee/GUI/scenes/MovieShowings.fxml
@@ -28,7 +28,7 @@
                   <PropertyBox fx:id="date" property="Datum" />
                   <PropertyBox fx:id="time" property="Aanvang" />
                   <PropertyBox fx:id="screen" property="Zaalnummer" />
-                  <Button mnemonicParsing="false" text="Zitjes kiezen" />
+                  <Button fx:id="goToSeats" mnemonicParsing="false" onAction="#goToSeats" text="Zitjes kiezen" />
                </children>
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
