--- a/src/preferee/GUI/scenes/ScreenSeats.fxml
+++ b/src/preferee/GUI/scenes/ScreenSeats.fxml
@@ -6,8 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="734.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox alignment="CENTER" styleClass="hoofding">
          <children>
@@ -28,7 +27,10 @@
    <center>
       <ScrollPane fitToHeight="true" fitToWidth="true" prefViewportHeight="286.0" prefViewportWidth="360.0" BorderPane.alignment="CENTER">
          <content>
-             <FlowPane fx:id="seatsMap" alignment="CENTER" columnHalignment="CENTER" BorderPane.alignment="CENTER" />
+             <FlowPane fx:id="seatsMap" alignment="CENTER" columnHalignment="CENTER" BorderPane.alignment="CENTER">
+               <children>
+                  <ProgressBar fx:id="progressBar" prefWidth="200.0" />
+               </children></FlowPane>
          </content>
          <BorderPane.margin>
             <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
@@ -39,8 +41,8 @@
       <VBox alignment="CENTER" spacing="10.0">
          <children>
             <Label text="Gekozen stoelnummers : " />
-            <ListView prefWidth="200.0" BorderPane.alignment="CENTER" />
-            <Button mnemonicParsing="false" text="Betalen" />
+            <ListView fx:id="seatNumbersList" prefWidth="200.0" BorderPane.alignment="CENTER" />
+            <Button mnemonicParsing="false" onAction="#goToPayment" text="Betalen" />
          </children>
          <BorderPane.margin>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
